2019-12-03  Richard Biener  <rguenther@suse.de>

PR tree-optimization/92758
	* tree-ssa-forwprop.c (simplify_vector_constructor): Restore
	operation on uniform vectors.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278938 138bc75d-0d04-0410-961f-82ee72b054a4